--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.data.mongodb.uri=mongodb+srv://${MONGODB_USER}:${MONGODB_PASSWORD}@${MONG
 spring.data.mongodb.database=bankDNC
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
+jwt.secret=${ACCESS_TOKEN_SECRET}
 
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=3MB
