--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,33 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/bankdnc/springbackend/security/**</exclude>
+						<exclude>com/bankdnc/springbackend/model/**</exclude>
+						<exclude>com/bankdnc/springbackend/SpringbackendApplication.class</exclude>
+						<exclude>com/bankdnc/springbackend/config/**</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
